--- a/war/WEB-INF/application.properties
+++ b/war/WEB-INF/application.properties
@@ -1,13 +1,13 @@
 error.internal = Se ha producido un error interno
 #login edit
-mail = reservarhotelgranada@yahoo.ie
-domain = reservarhotelgranada.com
-brand = Reservar Hotel Granada
+mail = topwebhosting@yahoo.ie
+domain = topwebhosting.com
+brand = Top Web Hosting
 #comentarios
-emailmail = web.reservarhotelgranada@gmail.com
-emailcontact = hola@reservarhotelgranada.com
-logo = RHG
-description = Información para que puedas buscar y reservar hotel en Granada tanto en el centro histórico de la ciudad o en las afueras y descubrir los mejores lugares para visitar de la capital de España.
+emailmail = web.topwebhosting@gmail.com
+emailcontact = hola@topwebhosting.com
+logo = TWH
+description = Información para saber dónde comprar hosting y contratar el mejor alojamiento y hospedaje web para tu proyecto online.
 keyakis = 3d64b3debcbc
 photowidth = 510
 photoheight = 375
