--- a/war/WEB-INF/application.properties
+++ b/war/WEB-INF/application.properties
@@ -1,12 +1,12 @@
 error.internal = Se ha producido un error interno
 #login edit
 mail = topwebhosting@yahoo.ie
-domain = topwebhosting.com
-brand = Top Web Hosting
+domain = comprarhostingweb.com
+brand = Comprar Hosting Web
 #comentarios
 emailmail = web.topwebhosting@gmail.com
-emailcontact = hola@topwebhosting.com
-logo = TWH
+emailcontact = hola@comprarhostingweb.com
+logo = NCHW
 description = Información para saber dónde comprar hosting y contratar el mejor alojamiento y hospedaje web para tu proyecto online.
 keyakis = 3d64b3debcbc
 photowidth = 510
